chore: checkpoint before performance optimization